* Decided to rename mp3fs to ffmpegfs because the project has grown far beyond
  a simple clone of mp3fs and the changes it will surely never be pushed back
  to the parent project. A big random applause to the makers of mp3fs for giving
  me a good head start!
* Cache management: Keep cache size within limit, ensure min. disk space, prune
  oldest entries
* Fix many crashes
* Fix memory leaks
* Fix mp4 check suite
* Add mp3 check suite
* Add --disable_cache parameter
* TODO: Add intelligent stream copy, e.g., if transcoding a transport stream
  that already represents a H264 video stream it would be possible to
  simply repackage it to a mp4 container without recoding.
* TODO: Cover art support still missing

nschlia@oblivion-software.de

Important changes in 0.92-FFmpeg (2017-12-14)

Changes in this release:
* Files will now be decoded to /tmp/ instead of memory.
* Full support for video files (mp4 target only).
* Removed --statcachesize option as caching will be handled by new disk cache.
* Fixed sync problems while accessing the same file concurrently
* Fixed many crashes due to incorrect usage of FFmpeg
* Cache directory user defineable
* Delete cache entries after predefined time
* Detect if file has changed and re-transcode
* Limit cache size
* Suspend transcode after n seconds
* Exit transcode after n seconds
* TODO: Add intelligent stream copy, e.g., if transcoding a transport stream
  that already represents a H264 video stream it would be possible to 
  simply repackage it to a mp4 container without recoding.

nschlia@oblivion-software.de

Important changes in 0.91-FFmpeg (2017-10-04)

Added FFmpeg for decoding and encoding. 

Changes in this release:
* Replaced decoding and encoding with FFmpeg.
* Removed discrete FLAC/Ogg/MP3 libraries. FFmpeg supports a wide range of
  formats, including these, so they are no longer required.
* TODO: Supports a huge number of file formats now (run "mp3fs --codecs" for 
  a list).