@@ -149,6 +149,7 @@ static struct fuse_opt ffmpegfs_opts[] =
     FFMPEGFS_OPT("cachepath=%s",                m_cachepath, 0),
     FFMPEGFS_OPT("--disable_cache",             m_disable_cache, 1),
     FFMPEGFS_OPT("disable_cache",               m_disable_cache, 1),
+    FFMPEGFS_OPT("--prune_cache",               m_prune_cache, 1),
 
     // Other
 #ifndef DISABLE_MAX_THREADS
@@ -187,159 +188,159 @@ static void cleanup();
 static void print_params();
 static void usage(char *name);
 
-#define INFO "Mount IN_DIR on OUT_DIR, converting audio/video files to MP3/MP4 upon access."
-
 static void usage(char *name)
 {
     printf("Usage: %s [OPTION]... IN_DIR OUT_DIR\n\n", name);
-    fputs(INFO "\n"
-               "\n"
-               "Encoding options:\n"
-               "\n"
-               "    --desttype=TYPE, -o desttype=TYPE\n"
-               "                           Select destination format. Can currently be\n"
-               "                           either mp3 or mp4. To stream videos, mp4 must be\n"
-               "                           selected.\n"
-               "                           Default: mp4\n"
+    fputs("Mount IN_DIR on OUT_DIR, converting audio/video files to MP3/MP4 upon access.\n"
+          "\n"
+          "Encoding options:\n"
+          "\n"
+          "    --desttype=TYPE, -o desttype=TYPE\n"
+          "                           Select destination format. Can currently be\n"
+          "                           either mp3 or mp4. To stream videos, mp4 must be\n"
+          "                           selected.\n"
+          "                           Default: mp4\n"
       #ifndef DISABLE_ISMV
-               "    --enable_ismv=0|1, -o enable_ismv=0|1\n"
-               "                           Set to 1 to create a ISMV (Smooth Streaming) file.\n"
-               "                           Must be used together with desttype=mp4.\n"
-               "                           Resulting files will stream to Internet Explorer, but\n"
-               "                           are not compatible with most other players.\n"
-               "                           Default: 0\n"
+          "    --enable_ismv=0|1, -o enable_ismv=0|1\n"
+          "                           Set to 1 to create a ISMV (Smooth Streaming) file.\n"
+          "                           Must be used together with desttype=mp4.\n"
+          "                           Resulting files will stream to Internet Explorer, but\n"
+          "                           are not compatible with most other players.\n"
+          "                           Default: 0\n"
       #endif
-               "\n"
-               "Audio Options:\n"
-               "\n"
-               "    --audiobitrate=BITRATE, -o audiobitrate=BITRATE\n"
-               "                           Audio encoding bitrate (in kbit): Acceptable values for BITRATE\n"
-               "                           include 96, 112, 128, 160, 192, 224, 256, and\n"
-               "                           320.\n"
-               "                           Default: 128 kbit\n"
-               "    --audiosamplerate=SAMPLERATE, -o audiosamplerate=SAMPLERATE\n"
-               "                           Limits the output sample rate to SAMPLERATE. If the source file\n"
-               "                           sample rate is more it will be downsampled automatically.\n"
-               "                           Typical values are 8000, 11025, 22050, 44100,\n"
-               "                           48000, 96000, 192000. Set to 0 to keep source rate.\n"
-               "                           Default: 44.1 kHz\n"
-               "\n"
-               "BITRATE can be defined...\n"
-               "In bit/s:  #  or #bps\n"
-               "In kbit/s: #M or #Mbps\n"
-               "In Mbit/s: #M or #Mbps\n"
-               "\n"
-               "SAMPLERATE can be defined...n"
-               "In Hz:  #  or #Hzn"
-               "In kHz: #K or #KHzn"
-               "\n"
-               "Video Options:\n"
-               "\n"
-               "    --videobitrate=BITRATE, -o videobitrate=BITRATE\n"
-               "                           Video encoding bit rate (in kbit). Acceptable values for BITRATE\n"
-               "                           range between 500 and 250000. Setting this too high or low may.\n"
-               "                           cause transcoding to fail.\n"
-               "                           Default: 2 Mbit\n"
+          "\n"
+          "Audio Options:\n"
+          "\n"
+          "    --audiobitrate=BITRATE, -o audiobitrate=BITRATE\n"
+          "                           Audio encoding bitrate (in kbit): Acceptable values for BITRATE\n"
+          "                           include 96, 112, 128, 160, 192, 224, 256, and\n"
+          "                           320.\n"
+          "                           Default: 128 kbit\n"
+          "    --audiosamplerate=SAMPLERATE, -o audiosamplerate=SAMPLERATE\n"
+          "                           Limits the output sample rate to SAMPLERATE. If the source file\n"
+          "                           sample rate is more it will be downsampled automatically.\n"
+          "                           Typical values are 8000, 11025, 22050, 44100,\n"
+          "                           48000, 96000, 192000. Set to 0 to keep source rate.\n"
+          "                           Default: 44.1 kHz\n"
+          "\n"
+          "BITRATE can be defined...\n"
+          "In bit/s:  #  or #bps\n"
+          "In kbit/s: #M or #Mbps\n"
+          "In Mbit/s: #M or #Mbps\n"
+          "\n"
+          "SAMPLERATE can be defined...n"
+          "In Hz:  #  or #Hzn"
+          "In kHz: #K or #KHzn"
+          "\n"
+          "Video Options:\n"
+          "\n"
+          "    --videobitrate=BITRATE, -o videobitrate=BITRATE\n"
+          "                           Video encoding bit rate (in kbit). Acceptable values for BITRATE\n"
+          "                           range between 500 and 250000. Setting this too high or low may.\n"
+          "                           cause transcoding to fail.\n"
+          "                           Default: 2 Mbit\n"
       #ifndef DISABLE_AVFILTER
-               "    --videoheight=HEIGHT, -o videoheight=HEIGHT\n"
-               "                           Sets the height of the target video.\n"
-               "                           When the video is rescaled the aspect ratio is\n"
-               "                           preserved if --width is not set at the same time.\n"
-               "                           Default: keep source video height\n"
-               "    --videowidth=WIDTH, -o videowidth=WIDTH\n"
-               "                           Sets the width of the target video.\n"
-               "                           Whene the video is rescaled the aspect ratio is\n"
-               "                           preserved if --height is not set at the same time.\n"
-               "                           Default: keep source video width\n"
-               "    --deinterlace, -o deinterlace\n"
-               "                           Deinterlace video if necessary while transcoding.\n"
-               "                           May need higher bit rate, but will increase picture qualitiy\n"
-               "                           when streaming via HTML5.\n"
-               "                           Default: no deinterlace\n"
+          "    --videoheight=HEIGHT, -o videoheight=HEIGHT\n"
+          "                           Sets the height of the target video.\n"
+          "                           When the video is rescaled the aspect ratio is\n"
+          "                           preserved if --width is not set at the same time.\n"
+          "                           Default: keep source video height\n"
+          "    --videowidth=WIDTH, -o videowidth=WIDTH\n"
+          "                           Sets the width of the target video.\n"
+          "                           Whene the video is rescaled the aspect ratio is\n"
+          "                           preserved if --height is not set at the same time.\n"
+          "                           Default: keep source video width\n"
+          "    --deinterlace, -o deinterlace\n"
+          "                           Deinterlace video if necessary while transcoding.\n"
+          "                           May need higher bit rate, but will increase picture qualitiy\n"
+          "                           when streaming via HTML5.\n"
+          "                           Default: no deinterlace\n"
       #endif
-               "\n"
-               "BITRATE can be defined...\n"
-               "In bit/s:  #  or #bps\n"
-               "In kbit/s: #M or #Mbps\n"
-               "In Mbit/s: #M or #Mbps\n"
-               "\n"
-               "Cache Options:\n"
-               "\n"
-               "     --expiry_time=TIME, -o expiry_time=TIME\n"
-               "                           Cache entries expire after TIME and will be deleted\n"
-               "                           to save disk space.\n"
-               "                           Default: 1 week\n"
-               "     --max_inactive_suspend=TIME, -o max_inactive_suspend=TIME\n"
-               "                           While being accessed the file is transcoded to the target format\n"
-               "                           in the background. When the client quits transcoding will continue\n"
-               "                           until this time out. Transcoding is suspended until it is\n"
-               "                           accessed again, and transcoding will continue.\n"
-               "                           Default: 2 minutes\n"
-               "     --max_inactive_abort=TIME, -o max_inactive_abort=TIME\n"
-               "                           While being accessed the file is transcoded to the target format\n"
-               "                           in the background. When the client quits transcoding will continue\n"
-               "                           until this time out, and the transcoder thread quits\n"
-               "                           Default: 5 minutes\n"
-               "     --max_cache_size=SIZE, -o max_cache_size=SIZE\n"
-               "                           Set the maximum diskspace used by the cache. If the cache would grow\n"
-               "                           beyond this limit when a file is transcoded, old entries will be deleted\n"
-               "                           to keep the cache within the size limit.\n"
-               "                           Default: unlimited\n"
-               "     --min_diskspace=SIZE, -o min_diskspace=SIZE\n"
-               "                           Set the required diskspace on the cachepath mount. If the remaining\n"
-               "                           space would fall below SIZE when a file is transcoded, old entries will\n"
-               "                           be deleted to keep the diskspace within the limit.\n"
-               "                           Default: 0 (no minimum space)\n"
-               "     --cachepath=DIR, -o cachepath=DIR\n"
-               "                           Sets the disk cache directory to DIR. Will be created if not existing.\n"
-               "                           The user running ffmpegfs must have write access to the location.\n"
-               "                           Default: temp directory, e.g. /tmp\n"
-               "     --disable_cache, -o disable_cache\n"
-               "                           Disable the cache functionality.\n"
-               "                           Default: enabled\n"
-               "\n"
-               "TIME can be defined...\n"
-               "Seconds: #\n"
-               "Minutes: #m\n"
-               "Hours:   #h\n"
-               "Days:    #d\n"
-               "Weeks:   #w\n"
-               "\n"
-               "SIZE can be defined...\n"
-               "In bytes:  # or #B\n"
-               "In KBytes: #K or #KB\n"
-               "In MBytes: #B or #MB\n"
-               "In GBytes: #G or #GB\n"
-               "In TBytes: #T or #TB\n"
+          "\n"
+          "BITRATE can be defined...\n"
+          "In bit/s:  #  or #bps\n"
+          "In kbit/s: #M or #Mbps\n"
+          "In Mbit/s: #M or #Mbps\n"
+          "\n"
+          "Cache Options:\n"
+          "\n"
+          "     --expiry_time=TIME, -o expiry_time=TIME\n"
+          "                           Cache entries expire after TIME and will be deleted\n"
+          "                           to save disk space.\n"
+          "                           Default: 1 week\n"
+          "     --max_inactive_suspend=TIME, -o max_inactive_suspend=TIME\n"
+          "                           While being accessed the file is transcoded to the target format\n"
+          "                           in the background. When the client quits transcoding will continue\n"
+          "                           until this time out. Transcoding is suspended until it is\n"
+          "                           accessed again, and transcoding will continue.\n"
+          "                           Default: 2 minutes\n"
+          "     --max_inactive_abort=TIME, -o max_inactive_abort=TIME\n"
+          "                           While being accessed the file is transcoded to the target format\n"
+          "                           in the background. When the client quits transcoding will continue\n"
+          "                           until this time out, and the transcoder thread quits\n"
+          "                           Default: 5 minutes\n"
+          "     --max_cache_size=SIZE, -o max_cache_size=SIZE\n"
+          "                           Set the maximum diskspace used by the cache. If the cache would grow\n"
+          "                           beyond this limit when a file is transcoded, old entries will be deleted\n"
+          "                           to keep the cache within the size limit.\n"
+          "                           Default: unlimited\n"
+          "     --min_diskspace=SIZE, -o min_diskspace=SIZE\n"
+          "                           Set the required diskspace on the cachepath mount. If the remaining\n"
+          "                           space would fall below SIZE when a file is transcoded, old entries will\n"
+          "                           be deleted to keep the diskspace within the limit.\n"
+          "                           Default: 0 (no minimum space)\n"
+          "     --cachepath=DIR, -o cachepath=DIR\n"
+          "                           Sets the disk cache directory to DIR. Will be created if not existing.\n"
+          "                           The user running ffmpegfs must have write access to the location.\n"
+          "                           Default: temp directory, e.g. /tmp\n"
+          "     --disable_cache, -o disable_cache\n"
+          "                           Disable the cache functionality.\n"
+          "                           Default: enabled\n"
+          "     --prune_cache\n"
+          "                           Prune cache immediately according to the above setting.\n"
+          "\n"
+          "TIME can be defined...\n"
+          "Seconds: #\n"
+          "Minutes: #m\n"
+          "Hours:   #h\n"
+          "Days:    #d\n"
+          "Weeks:   #w\n"
+          "\n"
+          "SIZE can be defined...\n"
+          "In bytes:  # or #B\n"
+          "In KBytes: #K or #KB\n"
+          "In MBytes: #B or #MB\n"
+          "In GBytes: #G or #GB\n"
+          "In TBytes: #T or #TB\n"
       #ifndef DISABLE_MAX_THREADS
-               "\n"
-               "Other:\n"
-               "\n"
-               "     --max_threads=COUNT, -o max_threads=COUNT\n"
-               "                           Limit concurrent transcoder threads. Set to 0 for unlimited threads."
-               "                           Reasonable values are up to 4 times number of CPU cores."
-               "                           Default: 4 times number of detected cpu cores\n"
+          "\n"
+          "Other:\n"
+          "\n"
+          "     --max_threads=COUNT, -o max_threads=COUNT\n"
+          "                           Limit concurrent transcoder threads. Set to 0 for unlimited threads."
+          "                           Reasonable values are up to 4 times number of CPU cores."
+          "                           Default: 4 times number of detected cpu cores\n"
       #endif
-               "\n"
-               "Logging:\n"
-               "\n"
-               "    --log_maxlevel=LEVEL, -o log_maxlevel=LEVEL\n"
-               "                           Maximum level of messages to log, either ERROR, WARNING, INFO, DEBUG\n"
-               "                           or TRACE. Defaults to WARNING, and always set to DEBUG in debug mode.\n"
-               "                           Note that the other log flags must also be set to enable logging.\n"
-               "    --log_stderr, -o log_stderr\n"
-               "                           Enable outputting logging messages to stderr.\n"
-               "                           Enabled in debug mode.\n"
-               "    --log_syslog, -o log_syslog\n"
-               "                           Enable outputting logging messages to syslog.\n"
-               "    --logfile=FILE, -o logfile=FILE\n"
-               "                           File to output log messages to. By default, no\n"
-               "                           file will be written.\n"
-               "\n"
-               "General/FUSE options:\n"
-               "    -h, --help             display this help and exit\n"
-               "    -V, --version          output version information and exit\n"
-               "\n", stdout);
+          "\n"
+          "Logging:\n"
+          "\n"
+          "    --log_maxlevel=LEVEL, -o log_maxlevel=LEVEL\n"
+          "                           Maximum level of messages to log, either ERROR, WARNING, INFO, DEBUG\n"
+          "                           or TRACE. Defaults to WARNING, and always set to DEBUG in debug mode.\n"
+          "                           Note that the other log flags must also be set to enable logging.\n"
+          "    --log_stderr, -o log_stderr\n"
+          "                           Enable outputting logging messages to stderr.\n"
+          "                           Enabled in debug mode.\n"
+          "    --log_syslog, -o log_syslog\n"
+          "                           Enable outputting logging messages to syslog.\n"
+          "    --logfile=FILE, -o logfile=FILE\n"
+          "                           File to output log messages to. By default, no\n"
+          "                           file will be written.\n"
+          "\n"
+          "General/FUSE options:\n"
+          "    -h, --help             display this help and exit\n"
+          "    -V, --version          output version information and exit\n"
+          "\n", stdout);
 }
 
 static int compare(const char *value, const char *pattern)
@@ -890,6 +891,27 @@ int main(int argc, char *argv[])
         fprintf(stderr, "ERROR: Failed to initialise logging module.\n");
         fprintf(stderr, "Maybe log file couldn't be opened for writing?\n\n");
         return 1;
+    }
+
+    if (params.m_prune_cache)
+    {
+        if (args.argc > 1)
+        {
+            fprintf(stderr, "ERROR: Invalid additional parameters for --prune_cache:\n");
+            for (int n = 1; n < args.argc; n++)
+            {
+                fprintf(stderr, "Invalid: '%s'\n", args.argv[n]);
+            }
+            return 1;
+        }
+
+        // Prune cache and exit
+        if (cache_new())
+        {
+            return 1;
+        }
+        transcoder_prune_cache();
+        return 0;
     }
 
     if (!params.m_basepath)
